pattern alignment fixes, anchors hover red

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -90,7 +90,11 @@ a {
 
   &:hover,
   &:focus {
-    color: darken($white, 20);
+    color: $red;
+  }
+
+  &:active {
+    color: darken($red, 20);
   }
 }
 
